# console_piano

./: CMakeLists.txt  Makefile  README.md  Rapport.txt  main.cpp  piano.mdj  score1.txt  todo_list.txt
include/: FileManager.cpp  FileManager.hpp  Keyboard.cpp  Keyboard.hpp  KeyboardQW.cpp  KeyboardQW.hpp  Note.cpp  Note.hpp  Piano.cpp  Piano.hpp  Rest.hpp  Silence.cpp  Silence.hpp  Song.cpp  Song.hpp
include/songs/: Tki.txt  WESH.txt  aristocats.txt  bon_tabactxt  crazy_train.txt  d.txt  dfjztxt.txt.txt  love.txt  mdr.txt  michelle.txt  mountain.txt  ptauintxt.txt  ptaunlove.txt  ptn txt  putain ‡a marche.txt  putain.txt  quoi  sa marche ou pas.txt  samere.txt  squeezietxt  stairway.txt  veridis_quo.txt  zedfzrfzkdfjnerfjenr'.'txt  zfzefzftxt
src/: FileManager.cpp  Keyboard.cpp  Note.cpp  Piano.cpp  Rest.cpp  Song.cpp
